--- a/index.html
+++ b/index.html
@@ -65,13 +65,19 @@
 										<span class="date">Fall 2023 - Present</span>
 										<h2><a href="backyardbrawl.html">Backyard Brawl</a></h2>
 									</header>
-									<a href="backyardbrawl.html" class="image fit"><img class="project-logo" src="images/TTFightersLogo.png" alt="" /></a>
+									<a href="backyardbrawl.html" class="image fit"><img class="project-logo" src="images/GIFs/BackyardBrawlLandingGif.gif" alt="" /></a>
 									<p class="project-role">Role: <span>Programmer, Producer</span></p>
 									<p>
 										Backyard Brawl is an upcoming competitve party game
 										that pits 2-4 players against one another in one of several
 										chaotic gamemodes.
 									</p>
+									<h3>Highlights:</h3>
+									<ul>
+										<li>Networked Game!</li>
+										<li>Security vs. Playability</li>
+										<li>Unified online and local codebase</li>
+									</ul>
 									<ul class="actions special">
 										<li><a href="backyardbrawl.html" class="button">Read More</a></li>
 									</ul>
