Added local multiplayer picture

--- a/backyardbrawl.html
+++ b/backyardbrawl.html
@@ -144,6 +144,10 @@ public void CloseMenu()
 											To alleviate this issue, I worked to reintroduce 
 											local multiplayer into the game.
 										</p>
+										<label>
+											<img src="images/BackyardBrawl/LocalLobby.png"/>
+											An image of the Local Multiplayer Lobby
+										</label>
 										<p>
 											I wanted to reuse as much of the networking code as possible to avoid re-coding 
 											the entire game to support local. To sort of “fake it,” I started the local device 
