--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<ul>
 										<li>Networked Game!</li>
 										<li>Security vs. Playability</li>
-										<li>Unified online and local codebase</li>
+										<li>Abstraction of online-and local-specific code</li>
 									</ul>
 									<ul class="actions special">
 										<li><a href="backyardbrawl.html" class="button">Read More</a></li>
