Added lobby joining video

--- a/backyardbrawl.html
+++ b/backyardbrawl.html
@@ -133,7 +133,13 @@ public void CloseMenu()
 											This allowed us to hit the ground running with our full team once the semester began, and gave us enough
 											background knowledge to not waste valuable semester time learning an entirely new system.
 										</p>
-										<!-- Insert video of online play? -->
+										<label>
+											<video controls loop class="full-size">
+												<source src="images/BackyardBrawl/MP4s/joining-lobby.mp4" type="video/mp4">
+											</video>
+											A video showing lobby hosting and joining
+										</label>
+										<!-- <br/> -->
 
 										<h2>Local Multiplayer</h2>
 										<p>
