--- a/robloxdev.html
+++ b/robloxdev.html
@@ -81,7 +81,7 @@
                                             as player characters are commonly multi-part assemblies.
 										</p>
 
-										<video controls loop height="520" width="520">
+										<video controls loop>
 											<source src="images/MP4s/ForcePushPull.mp4" type="video/mp4">
 										</video>
 										<br/>
@@ -103,7 +103,7 @@
                                             and then see that selection reflected in the race itself.
                                         </p>
 
-										<video controls loop height="520" width="520">
+										<video controls loop>
 											<source src="images/MP4s/BoardSelection.mp4" type="video/mp4">
 										</video>
 										<br/>
@@ -122,7 +122,7 @@
                                             providing players with an experience that is true to the real game.
                                         </p>
 
-										<video controls loop height="520" width="520">
+										<video controls loop>
 											<source src="images/MP4s/MultiplayerBlackjack.mp4" type="video/mp4">
 										</video>
 										<br/>
@@ -151,7 +151,7 @@
                                             such as the amount of damage to deal if an opposing player is hit.
                                         </p>
 
-										<video controls loop height="520" width="520">
+										<video controls loop>
 											<source src="images/MP4s/WeaponFactoryFiring.mp4" type="video/mp4">
 										</video>
 										<br/>
@@ -162,7 +162,7 @@
                                             and idle animations for each of the guns I scripted.
                                         </p>
 
-										<video controls loop height="520" width="520">
+										<video controls loop>
 											<source src="images/MP4s/WeaponFactoryAnimations.mp4" type="video/mp4">
 										</video>
 										<br/>
